<resources>
    <string name="app_name">Uni Transporte</string>
    <string name="btn_login">Entrar</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="btn_cadastro">Cadastrar Organizador</string>
    <string name="hint_nome_comp">Nome Completo</string>
    <string name="hint_confirmar_senha">Confirmar Senha</string>
    <string name="inf_estados">Estado:</string>
    <string name="inf_cidades">Cidade:</string>
    <string name="preencha_tudo">Preencha todos os campos.</string>
    <string name="senhas_diferen">As senhas não coincidem.</string>
    <string name="sucesso_cadastro">Organizador cadastrado com sucesso.</string>
    <string name="senha_minino6">Informe uma senha com no mínimo 6 caracteres.</string>
    <string name="email_ja_cadastrado">Email já cadastrado.</string>
    <string name="email_invalido">Email inválido.</string>
    <string name="erro_cadastro">Erro ao cadastrar usuário.</string>
    <string name="email_senha_incorretos">Email ou senha incorretos.</string>
    <string name="organizadores">Organizadores</string>
    <string name="usuarios">Usuários</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="logout">Sair</string>
    <string name="criar_viagem">Nova viagem</string>
    <string name="nome_viagem">Nome da viagem</string>
    <string name="origem">Origem:</string>
    <string name="destino">Destino:</string>
    <string name="confirmar">Confirmar</string>
    <string name="hint_hora_origem">Horário saída da origem</string>
    <string name="hint_hora_destino">Horário saída do destino</string>
    <string name="selec_dias_semana">Selecione os dias da semana</string>
    <string name="domingo">Domingo</string>
    <string name="segunda">Segunda</string>
    <string name="terca">Terça</string>
    <string name="quarta">Quarta</string>
    <string name="quinta">Quinta</string>
    <string name="sexta">Sexta</string>
    <string name="sabado">Sábado</string>
    <string name="limpar_tudo">Limpar tudo</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="viagens">Viagens</string>
    <string name="sucesso_criar_viagem">Viagem criada com sucesso.</string>
    <string name="erro_salvar_dados_db">Erro ao salvar dados no banco de dados.</string>
    <string name="dia0">dom </string>
    <string name="dia1">seg </string>
    <string name="dia2">ter </string>
    <string name="dia3">qua </string>
    <string name="dia4">qui </string>
    <string name="dia5">sex </string>
    <string name="dia6">sáb </string>
    <string name="novo_passageiro">Novo passageiro</string>
    <string name="hint_nome_passageiro">Nome e sobrenome</string>
    <string name="hint_destino">Destino</string>
    <string name="lista_passageiros">Lista de passageiros:</string>
    <string name="listar_passageiros">Listar passageiros</string>
    <string name="onde_reside_passageiro">Onde o passageiro reside:</string>
    <string name="sucesso_cadastro_passageiro">Passageiro cadastrado com sucesso.</string>
    <string name="erro_cadastro_passageiro">Erro ao cadastrar passageiro.</string>
    <string name="sem_passageiros">Ainda sem passageiros criados.</string>
    <string name="minhas_viagens">Minhas viagens:</string>
    <string name="viagens_disponiveis">Viagens disponíveis</string>
    <string name="se_inscrever">Se inscrever</string>
    <string name="inf_seu_destino">Informe seu destino</string>
    <string name="preencha_destino">Preencha o destino.</string>
    <string name="voce_inscreveu_sucesso">Você se inscreveu com sucesso.</string>
    <string name="voce_ja_inscrito">Você já está inscrito nessa viagem.</string>
    <string name="apagar_viagem">Apagar viagem</string>
    <string name="viagem_apagada">Viagem apagada com sucesso.</string>
    <string name="desinscrever">Se desinscrever</string>
    <string name="voce_nao_esta_inscrito">Você não está inscrito nessa viagem.</string>
    <string name="voce_se_desinscreveu_com_sucesso">Você se desinscreveu da viagem com sucesso.</string>
    <string name="total_passageiros">Total de Passageiros: </string>
    <string name="editar_viagem">Editar Viagem</string>
    <string name="viagem_atualizada">Viagem atualizada com sucesso.</string>
    <string name="buscar_localizacao">Buscar por minha localização</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="gps_off">GPS desabilitado.</string>
    <string name="inf_maps_perfil_org">Local de cadastro:</string>

</resources>