<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.NovoPassageiroFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/purple_500"
            app:titleTextColor="@color/white"/>

        <TextView
            android:id="@+id/textViewNovoPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mToolbar"
            android:layout_marginTop="40dp"
            android:textSize="35sp"
            android:text="@string/novo_passageiro"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/editTextNomeNovoPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNovoPassageiro"
            android:ems="13"
            android:hint="@string/hint_nome_passageiro"
            android:inputType="textPersonName"
            android:layout_marginTop="40dp"/>

        <EditText
            android:id="@+id/editTextEmailNovoPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextNomeNovoPassageiro"
            android:ems="13"
            android:hint="@string/hint_email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/editTextSenhaNovoPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextEmailNovoPassageiro"
            android:hint="@string/hint_senha"
            android:ems="13"
            android:inputType="text"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textViewInfOrigemCriaViagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextSenhaNovoPassageiro"
            android:text="@string/onde_reside_passageiro"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/layoutEstadoNovoPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInfOrigemCriaViagem"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewInfEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:minHeight="48dp"
                android:text="@string/inf_estados" />

            <Spinner
                android:id="@+id/spinnerEstadosNovoPassageiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layoutCidadeNovoPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEstadoNovoPassageiro"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewInfCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:minHeight="48dp"
                android:text="@string/inf_cidades" />

            <Spinner
                android:id="@+id/spinnerCidadesNovoPassageiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"/>

        </LinearLayout>

        <Button
            android:id="@+id/buttonConfirmarNovoPassageiro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutCidadeNovoPassageiro"
            android:layout_marginTop="20dp"
            android:text="@string/confirmar"
            android:textAllCaps="false"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>






























