<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CadastroActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTextCadastrarOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="35sp"
                android:text="@string/btn_cadastro"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal"
                />

            <EditText
                android:id="@+id/editTextEmailCadastroOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextNomeCompOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_nome_comp"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/editTextSenhaOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                />

            <EditText
                android:id="@+id/editTextConfirmSenh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_confirmar_senha"
                android:inputType="textPassword"
                android:minHeight="48dp"
                />
            <LinearLayout
                android:id="@+id/layoutEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginLeft="62dp"
                android:layout_marginRight="62dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewInfEstado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:minHeight="48dp"
                    android:text="@string/inf_estados" />

                <Spinner
                    android:id="@+id/spinnerEstados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"/>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutEstado"
                android:layout_marginLeft="62dp"
                android:layout_marginRight="62dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewInfCidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:minHeight="48dp"
                    android:text="@string/inf_cidades" />

                <Spinner
                    android:id="@+id/spinnerCidades"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonBuscarLocalizacaoCadastroOrg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buscar_localizacao"
                android:textAllCaps="false"
                android:onClick="buscarInformacoesGPS"/>


            <WebView
                android:id="@+id/webViewMaps"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                />

            <Button
                android:id="@+id/buttonCadastrarOrgCadr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cadastro"
                android:textAllCaps="false"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:indeterminateTint="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                />



        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>